force-app/main/default/objects/PMC_SS_StatisticalBaselineForecastData__c/PMC_SS_StatisticalBaselineForecastData__c.object-meta.xml
<CustomObject>
    <description>Created this object for PoC on Advanced Account Forecsting</description>
    <label>Statistical Baseline Forecast Data</label>
    <nameField>
        <displayFormat>SBF-{00000}</displayFormat>
        <label>Statistical Baseline Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Statistical Baseline Forecast Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>