force-app/main/default/objects/PMC_SS_StatisticalBaselineForecastData__c/fields/PMC_SS_Account__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Statistical Baseline Forecast Data</relationshipLabel>
    <relationshipName>Statistical_Baseline_Forecast_Data</relationshipName>
    <type>Lookup</type>
</CustomField>