force-app/main/default/objects/PMC_SS_StatisticalBaselineForecastData__c/fields/PMC_SS_AccountManager__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccountManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Statistical_Baseline_Forecast_Data</relationshipName>
    <type>Lookup</type>
</CustomField>