force-app/main/default/objects/PMC_SS_StatisticalBaselineForecastData__c/fields/PMC_SS_ExternalUniqueIdentifier__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ExternalUniqueIdentifier__c</fullName>
    <externalId>true</externalId>
    <label>External Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>