force-app/main/default/objects/PMC_SS_StatisticalBaselineForecastData__c/fields/PMC_SS_Location__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Statistical Baseline Forecast Data</relationshipLabel>
    <relationshipName>Statistical_Baseline_Forecast_Data</relationshipName>
    <type>Lookup</type>
</CustomField>