force-app/main/default/objects/PMC_SS_StatisticalBaselineForecastData__c/fields/PMC_SS_O9AccountManagerId__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_O9AccountManagerId__c</fullName>
    <description>Field to store the unique Id for account manager</description>
    <label>Account Manager ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>