force-app/main/default/objects/PMC_SS_StatisticalBaselineForecastData__c/fields/PMC_SS_O9CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_O9CustomerNumber__c</fullName>
    <description>Field stores the unique customer identifier for Account</description>
    <label>Customer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>