force-app/main/default/objects/PMC_SS_StatisticalBaselineForecastData__c/fields/PMC_SS_O9LocationNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_O9LocationNumber__c</fullName>
    <description>Filed to store unique identifier for Location.</description>
    <label>Location Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>