force-app/main/default/objects/PMC_SS_StatisticalBaselineForecastData__c/fields/PMC_SS_O9ProductNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_O9ProductNumber__c</fullName>
    <description>Field to store the unique identifier for Product</description>
    <label>Product Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>