force-app/main/default/objects/PMC_SS_StatisticalBaselineForecastData__c/fields/PMC_SS_PeriodDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_PeriodDate__c</fullName>
    <description>Date of the periods this statistical baseline forecast is part of.</description>
    <label>Period Date</label>
    <type>Date</type>
</CustomField>