force-app/main/default/objects/PMC_SS_StatisticalBaselineForecastData__c/fields/PMC_SS_Quantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Quantity__c</fullName>
    <description>Quantity received from o9</description>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>