force-app/main/default/objects/PMC_SS_StatisticalBaselineForecastData__c/fields/PMC_SS_QuantityAccountsUoM__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_QuantityAccountsUoM__c</fullName>
    <description>Field to store the account UOM converted value of Quantity.</description>
    <formula>IF(  AND( 
         OR(PMC_SS_Account__r.PMC_SS_UnitofMeasure__r.Name =  &apos;STN&apos; , 
            PMC_SS_Account__r.PMC_SS_UnitofMeasure__r.Name =  &apos;MTN&apos; ), 
         PMC_SS_UnitofMeasure__r.Name ==  PMC_SS_Account__r.PMC_SS_UnitofMeasure__r.Name), 
         PMC_SS_Quantity__c , 
         IF( AND(PMC_SS_UnitofMeasure__r.Name = &apos;MTN&apos;, PMC_SS_Account__r.PMC_SS_UnitofMeasure__r.Name = &apos;STN&apos; ), 
         PMC_SS_Quantity__c  *  $CustomMetadata.PMC_SS_UOMConversionMapping__mdt.MTNtoSTN.PMC_SS_ConversionFactor__c, 
         IF( AND(PMC_SS_UnitofMeasure__r.Name = &apos;STN&apos;, PMC_SS_Account__r.PMC_SS_UnitofMeasure__r.Name = &apos;MTN&apos; ), 
            PMC_SS_Quantity__c * $CustomMetadata.PMC_SS_UOMConversionMapping__mdt.STNtoMTN.PMC_SS_ConversionFactor__c , 
            0) ) )</formula>
    <label>Quantity (Account’s UoM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>