force-app/main/default/objects/PMC_SS_StatisticalBaselineForecastData__c/fields/PMC_SS_UnconstrainedCDPQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_UnconstrainedCDPQuantity__c</fullName>
    <label>Unconstrained CDP Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>